mobile updates to fix date alignment

--- a/src/app.css
+++ b/src/app.css
@@ -51,7 +51,6 @@
 		@apply align-top;
 		@apply inline-block;
 		@apply w-[80%];
-		@apply me-2;
 	}
 	.right {
 		@apply align-top;
